--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 .banner_holderImage{
     height: 100%;
     position:relative;
-    background:   url("../images/rick-morty-story-train.jpg")no-repeat;
+    /* background:   url("../images/rick-morty-story-train.jpg")no-repeat; */
+    background:   url("../story-train/images/rick-morty-story-train.jpg")no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -29,6 +30,13 @@
     <div class="banner_holder">
         <div class="banner_holderImage"> </div>  
     </div>
+    <div style="text-align: right;" >
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=7288775&style=0001&nbdigits=5&type=page&initCount=0" title="User Stats" Alt="PHP Hits Count"   border="0" >
+    </a>                                    
+    </div>
+    
     <!-- <div><img src="../story-train/images/rick-morty-story-train.jpg" style="height:100%;" alt="img"/></div> -->
 </body>
 </html>
