--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     background-position: center;
 }
     </style>
+    <script data-ad-client="ca-pub-2191492385940651" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+    </script>
+
 </head>
 <body>
     <div class="banner_holder">
